debugging changes